--- a/UnityProject/MemoryOfHope/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/UnityProject/MemoryOfHope/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -6,12 +6,12 @@
             {
                 "type": "UnityEngine.Polybrush.BrushMirror, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "Brush.MirrorAxis",
-                "value": "{\"m_Value\":0}"
+                "value": "{\"m_Value\":7}"
             },
             {
                 "type": "UnityEngine.Polybrush.MirrorCoordinateSpace, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "Brush.MirrorSpace",
-                "value": "{\"m_Value\":1}"
+                "value": "{\"m_Value\":0}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -36,7 +36,7 @@
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "Scattering.AvoidOverlappingObjects",
-                "value": "{\"m_Value\":true}"
+                "value": "{\"m_Value\":false}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -81,7 +81,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"44d1eae8053bc5f448edfb250ac61a96\",\"type\":2},\"prefab\":{\"fileID\":919132149155446097,\"guid\":\"6d0e073738389ea429c014d62ab2424c\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"44d1eae8053bc5f448edfb250ac61a96\",\"type\":2},\"prefab\":{\"fileID\":7827223479206731163,\"guid\":\"fd85ae4f946b5304da5669647541da7e\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"44d1eae8053bc5f448edfb250ac61a96\",\"type\":2},\"prefab\":{\"fileID\":8690352995695997579,\"guid\":\"4bfdd7d44afcdaa49a45236ebb5f6291\",\"type\":3}}]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
