--- a/UnityProject/MemoryOfHope/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/UnityProject/MemoryOfHope/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -36,7 +36,7 @@
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "Scattering.AvoidOverlappingObjects",
-                "value": "{\"m_Value\":true}"
+                "value": "{\"m_Value\":false}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -81,7 +81,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"44d1eae8053bc5f448edfb250ac61a96\",\"type\":2},\"prefab\":{\"fileID\":919132149155446097,\"guid\":\"6d0e073738389ea429c014d62ab2424c\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"44d1eae8053bc5f448edfb250ac61a96\",\"type\":2},\"prefab\":{\"fileID\":8132551269409444065,\"guid\":\"730580253ff885c4b888c602d20dd665\",\"type\":3}}]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
