--- a/UnityProject/MemoryOfHope/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/UnityProject/MemoryOfHope/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -17,6 +17,86 @@
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "Mesh.RebuildColliders",
                 "value": "{\"m_Value\":true}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "Scattering.UsePivotForPlacement",
+                "value": "{\"m_Value\":true}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "Scattering.ParentObjectsWithSurface",
+                "value": "{\"m_Value\":true}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "Scattering.AvoidOverlappingObjects",
+                "value": "{\"m_Value\":false}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "Brush.IgnoreUnselected",
+                "value": "{\"m_Value\":true}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "Mesh.UseAdditionalVertexStream",
+                "value": "{\"m_Value\":false}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "Brush.HideWireframe",
+                "value": "{\"m_Value\":true}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "Brush.LockBrushToFirstObject",
+                "value": "{\"m_Value\":true}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "RaiseLowerBrush.IgnoreOpenEdges",
+                "value": "{\"m_Value\":true}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "RaiseLowerBrush.StickToFirstAppliedDirection",
+                "value": "{\"m_Value\":true}"
+            },
+            {
+                "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
+                "key": "ScatteringEditor.userLoadout",
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":1619672329054870069,\"guid\":\"b8dc89ef2fc8d6a45a13733999f2fa9d\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":6071755475432602139,\"guid\":\"4261444547c1a53468de26eb8d32ffa0\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":2633121567384472031,\"guid\":\"0b17dc664245faf4ba006735a83c60b4\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":1548041896919149670,\"guid\":\"2bf850b92d82e5040b0739e1d78c3fdf\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":1778363394988922946,\"guid\":\"be158ca20aa6ec34da8334c397c89b14\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":314276778018040078,\"guid\":\"5a9899909a2b714429b5ca811a65202f\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":6652740435613562072,\"guid\":\"a28fb53de821aec49bafeabe81392192\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":5783912462314197705,\"guid\":\"30e3e735bda50f34492290ed0e349f1e\",\"type\":3}}]}}"
+            },
+            {
+                "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "ScatteringEditor.PreviewThumSize",
+                "value": "{\"m_Value\":64}"
+            },
+            {
+                "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "GI.WorkflowMode",
+                "value": "{\"m_Value\":1}"
+            },
+            {
+                "type": "UnityEngine.Color, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
+                "key": "Brush.BrushColor",
+                "value": "{\"m_Value\":{\"r\":0.0,\"g\":0.800000011920929,\"b\":1.0,\"a\":1.0}}"
+            },
+            {
+                "type": "UnityEngine.Gradient, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
+                "key": "Brush.BrushColorGradient",
+                "value": "{\"m_Value\":{\"serializedVersion\":\"2\",\"key0\":{\"r\":1.0,\"g\":1.0,\"b\":1.0,\"a\":1.0},\"key1\":{\"r\":1.0,\"g\":1.0,\"b\":1.0,\"a\":1.0},\"key2\":{\"r\":0.0,\"g\":0.0,\"b\":0.0,\"a\":0.0},\"key3\":{\"r\":0.0,\"g\":0.0,\"b\":0.0,\"a\":0.0},\"key4\":{\"r\":0.0,\"g\":0.0,\"b\":0.0,\"a\":0.0},\"key5\":{\"r\":0.0,\"g\":0.0,\"b\":0.0,\"a\":0.0},\"key6\":{\"r\":0.0,\"g\":0.0,\"b\":0.0,\"a\":0.0},\"key7\":{\"r\":0.0,\"g\":0.0,\"b\":0.0,\"a\":0.0},\"ctime0\":0,\"ctime1\":65535,\"ctime2\":0,\"ctime3\":0,\"ctime4\":0,\"ctime5\":0,\"ctime6\":0,\"ctime7\":0,\"atime0\":0,\"atime1\":65535,\"atime2\":0,\"atime3\":0,\"atime4\":0,\"atime5\":0,\"atime6\":0,\"atime7\":0,\"m_Mode\":0,\"m_NumColorKeys\":2,\"m_NumAlphaKeys\":2}}"
+            },
+            {
+                "type": "UnityEngine.Polybrush.PolyDirection, Unity.Polybrush, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
+                "key": "RaiseLowerBrush.Direction",
+                "value": "{\"m_Value\":0}"
+            },
+            {
+                "type": "System.Single, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "RaiseLowerBrush.Strength",
+                "value": "{\"m_Value\":5.0}"
             }
         ]
     }
