--- a/UnityProject/MemoryOfHope/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/UnityProject/MemoryOfHope/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -74,9 +74,14 @@
                 "value": "{\"m_Value\":true}"
             },
             {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "Mesh.RebuildNormals",
+                "value": "{\"m_Value\":true}"
+            },
+            {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":9197211336374521545,\"guid\":\"a60c3b086632ba04fb65c5f46d817329\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":5583533742522792553,\"guid\":\"d01a7ef0b037ef4489f83246013cb4f8\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":4395473253819967808,\"guid\":\"405f63552539d3d468f7b8f83f37d87f\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":1548041896919149670,\"guid\":\"2bf850b92d82e5040b0739e1d78c3fdf\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":1778363394988922946,\"guid\":\"be158ca20aa6ec34da8334c397c89b14\",\"type\":3}}]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -112,6 +117,11 @@
                 "type": "System.Single, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "RaiseLowerBrush.Strength",
                 "value": "{\"m_Value\":5.0}"
+            },
+            {
+                "type": "System.Single, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "Brush.VertexBillboardSize",
+                "value": "{\"m_Value\":2.0}"
             }
         ]
     }
