--- a/UnityProject/MemoryOfHope/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/UnityProject/MemoryOfHope/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -81,12 +81,12 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":1548041896919149670,\"guid\":\"2bf850b92d82e5040b0739e1d78c3fdf\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":1778363394988922946,\"guid\":\"be158ca20aa6ec34da8334c397c89b14\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"0c12c06f8f2ee2a4bb5300aac228237d\",\"type\":2},\"prefab\":{\"fileID\":1778363394988922946,\"guid\":\"be158ca20aa6ec34da8334c397c89b14\",\"type\":3}}]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "ScatteringEditor.PreviewThumSize",
-                "value": "{\"m_Value\":64}"
+                "value": "{\"m_Value\":60}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
